--- a/EtecBarraBonita/appsettings.json
+++ b/EtecBarraBonita/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EtecConexao": "server=localhost;port3306;database=EtecBarraBonita;uid=root;pwd=''"
+  }
 }
